Final Good Commit. Google Maps API.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="google_API_key">AIzaSyBYn_iTpYbpDv54iq_awa0N6LUP0m53jYQ</string>
 </resources>
