Final Good Commit. Just CSS needed.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,15 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
-    <string name="google_API_key">AIzaSyBYn_iTpYbpDv54iq_awa0N6LUP0m53jYQ</string>
+    <string name="google_API_key">AIzaSyAiuX05feaUrmkk13Ax4-3uKVQyyDS8ou4</string>
+    <string-array name="relationshipStageSpinner">
+        <item>Select</item>
+        <item>Beginner</item>
+        <item>Advanced</item>
+    </string-array>
+    <string-array name="resturantSpinner">
+        <item>Select</item>
+        <item>italian</item>
+        <item>Medetaranian</item>
+    </string-array>
 </resources>
